# bus-charging-scheduler

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-ui.txt  requirements.txt
bus_charging_scheduler/: __init__.py  _pytest_cli.py
bus_charging_scheduler/domain/: __init__.py  models.py
bus_charging_scheduler/network/: __init__.py  builder.py  errors.py  graph.py  stations.py  travel.py
bus_charging_scheduler/output/: __init__.py  builder.py  models.py  pipeline.py
bus_charging_scheduler/scenarios/: __init__.py  errors.py  loader.py  validation.py
bus_charging_scheduler/solver/: __init__.py  context.py  errors.py  model_builder.py  result.py  scheduler.py  time_grid.py  variables.py
bus_charging_scheduler/solver/constraints/: __init__.py  battery_range.py  charger_capacity.py  registry.py  route_order.py
bus_charging_scheduler/solver/objectives/: __init__.py  individual_delay.py  network_efficiency.py  operator_fairness.py  registry.py
bus_charging_scheduler/ui/: __init__.py  app.py  launcher.py  scenarios.py  views.py
data/scenarios/: minimal_valid.yaml  multi_charger_hub.yaml  three_station_loop.yaml  two_operators_fairness.yaml
docs/: ARCHITECTURE.md  EXTENDING.md
scripts/: test.sh
tests/: conftest.py  test_example_scenarios.py  test_network.py  test_objectives.py  test_scenario_loader.py  test_schedule_output.py  test_solver.py  test_ui_views.py
