[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bus-charging-scheduler"
version = "0.1.0"
description = "Bus charging scheduler using OR-Tools CP-SAT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ortools>=9.10",
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
bcs-pytest = "bus_charging_scheduler._pytest_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bus_charging_scheduler*"]
